@startuml
class LATSState {
  +input: str
  +chat_history: List
  +intermediate_steps: List
  +langchain_tracing: Any
  +agent_outcome: Any
  +step_tracing: Dict
}

class LATSAgent {
  -tools: List
  -llm: Any
  -tracing_enabled: bool
  -tracing_level: str
  
  +__init__(llm_configs, tools, memory, memory_config, tracing_config)
  +build_graph(): None
  -_run_agent_llm(state): Dict
  -_execute_tools(state): Dict
  -_record_tracing(state): Dict
  -_analyze_trace(state): Dict
  -_should_execute_tools(state): bool
  -_should_analyze_trace(state): bool
  -_parse_tracing_results(tracing_data): Dict
  +run(input_text): Dict
}

class BaseAgent {
}

LATSAgent --|> BaseAgent
LATSAgent -- LATSState

note right of LATSAgent
  Implements the LATS (LangChain Agents
  Tracing System) pattern for detailed
  tracing of agent execution
end note
@enduml